# mastosync

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  config.go  database.go  database_test.go  go.mod  go.sum  main.go  mandala.go  mandala.wls  poster.go  poster_test.go  saver.go  saver_test.go  syncer.go  syncer_test.go  tooter.go  tooter_test.go
