module(
    name = "mastosync",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "apple_support", version = "2.2.0")

apple_support_cc = use_extension("@apple_support//crosstool:setup.bzl", "apple_cc_configure_extension")
use_repo(apple_support_cc, "local_config_apple_cc", "local_config_apple_cc_toolchains")

skylib_gazelle = use_extension("@bazel_skylib//gazelle:extensions.bzl", "skylib_gazelle")
use_repo(skylib_gazelle, "bazel_skylib_gazelle_plugin")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# we will run gazelle later to populate this
use_repo(
    go_deps,
    "com_github_bluesky_social_indigo",
    "com_github_danrusei_gobot_bsky",
    "com_github_jomei_notionapi",
    "com_github_mark3labs_mcp_go",
    "com_github_mattn_go_mastodon",
    "com_github_mattn_go_sqlite3",
    "com_github_microcosm_cc_bluemonday",
    "com_github_mmcdole_gofeed",
    "com_github_neurosnap_sentences",
    "com_github_pkg_browser",
    "com_github_spf13_viper",
    "com_github_urfave_cli",
    "in_gopkg_yaml_v3",
    "org_golang_google_api",
    "org_golang_x_net",
    "org_golang_x_oauth2",
)
